@startuml

' hide the spot
' hide circle

' avoid problems with angled crows feet
' skinparam linetype ortho


package "Scuria" {
  entity "users" {
    + id [PK]
    ==
    # company_id [FK(companies,id)]
    email
    encrypted_password
    reset_password_token
    reset_password_sent_at
    remember_created_at
    sign_in_count
    current_sign_in_at
    last_sign_in_at
    current_sign_in_ip
    last_sign_in_ip
    failed_attempts
    unlock_token
    locked_at
    deleted_at
    created_at
    updated_at
  }

  entity "admins" {
    + id [PK]
    ==
    email
    encrypted_password
    reset_password_token
    reset_password_sent_at
    remember_created_at
    sign_in_count
    current_sign_in_at
    last_sign_in_at
    current_sign_in_ip
    last_sign_in_ip
    failed_attempts
    unlock_token
    locked_at
    created_at
    updated_at
  }

  entity "companies" {
    + id [PK]
    ==
    email
    name
    deleted_at
    created_at
    updated_at
  }

  entity "backlog_authorities" {
    + id [PK]
    ==
    # backlog_id [FK(backlogs,id)]
    roll_name
    created_at
    updated_at
  }

  entity "backlogs" {
    + id [PK]
    ==
    # company_id [FK(companies,id)]
    # parent_id [FK(backlogs,id)] 
    name
    created_at
    updated_at 
  }

  entity "backlog_members" {
    + id [PK]
    ==
    # backlog_id [FK(backlogs,id)]
    # authority_id [FK(backlog_authorities,id)
    # user_id [FK(users,id) 
    created_at
    updated_at
  }

  entity "BacklogColumns" as backlog_columns {
    +id: INT
    ==
    name: VARCHAR(255)
    update_at: timestamp
    created_at: timestamp
  }
  
  
  entity "BacklogItems" as backlog_items {
    +id: INT
    ==
    name: VARCHAR(255)
    # assigned_user_id: INT [FK(users,id)]
    # backlog_column_id: INT [FK(backlog_columns,id)]
    # backlog_tag_id: [FK(backlog_items_to_backlog_tags, back_log_tag_id)]
    point: INT
    order: INT
    completed_at: timestamp
    update_at: timestamp
    created_at: timestamp
  }
  
  entity "BacklogItem to BacklogTags" as backlog_items_to_backlog_tags {
    +id: INT
    ==
    backlog_item_id: INT
    backlog_tag_id: INT [FK(backlog_items,id)]
    update_at: timestamp [FK(backlog_tags,id)]
    created_at: timestamp
  }
  
  entity "BacklogTags" as backlog_tags {
    +id: INT
    ==
    name: VARCHAR(255)
    # backlog_item_id: INT [FK(backlog_items_to_backlog_tags, back_log_item_id)]
    update_at: timestamp
    created_at: timestamp
  }


  users }o-- companies
  backlog_authorities ||-- backlogs
  backlogs |o-- backlogs
  backlog_members }o-- backlogs
  backlog_members -- backlog_authorities
  backlog_members }o--o{ users

  users ||--o{ backlog_items
  
  backlog_columns ||--o{ backlog_items
  backlog_items ||--|{ backlog_items_to_backlog_tags
  backlog_items_to_backlog_tags }|--||backlog_tags

}


@enduml
